Revert "estilizando filtro"
This reverts commit e2f5b92c2cf34e06fc01bb7d8584c25ec52ffe8b.
