# AchamigosMicrosservicos/controllers/UserController.js
@@ -8,7 +8,7 @@ const SECRET = process.env.JWT_SECRET || 'seusegredoaqui';
 exports.cadastrar = async (req, res) => {
   try {
     
-    const { nome, cnpj, telefone, userLogin, senha, email, endereco, tipo, userStatus, linkUser } = req.body;
+    const { nome, cnpj, telefone, userLogin, senha, email, endereco, linkUser } = req.body;
 
     
     if (await User.findOne({ email })) {
@@ -21,7 +21,7 @@ exports.cadastrar = async (req, res) => {
 
     
     const user = await User.create({
-      nome, cnpj, telefone, userLogin, senha, email, endereco, tipo, userStatus, linkUser
+      nome, cnpj, telefone, userLogin, senha, email, endereco, linkUser
     });
 
     
@@ -38,31 +38,31 @@ exports.cadastrar = async (req, res) => {
 };
 
 
-exports.login = async (req, res) => {
-  try {
+// exports.login = async (req, res) => {
+//   try {
     
-    const { userLogin, senha } = req.body;
+//     const { userLogin, senha } = req.body;
 
     
-    const user = await User.findOne({ userLogin }).select('+senha');
+//     const user = await User.findOne({ userLogin }).select('+senha');
 
     
-    if (!user || !(await bcrypt.compare(senha, user.senha))) {
-      return res.status(401).json({ error: 'Credenciais inválidas' });
-    }
+//     if (!user || !(await bcrypt.compare(senha, user.senha))) {
+//       return res.status(401).json({ error: 'Credenciais inválidas' });
+//     }
 
     
-    const token = jwt.sign({ id: user._id }, SECRET, { expiresIn: '1d' });
+//     const token = jwt.sign({ id: user._id }, SECRET, { expiresIn: '1d' });
 
     
-    const userObj = user.toObject();
-    delete userObj.senha;
-    delete userObj.__v;
+//     const userObj = user.toObject();
+//     delete userObj.senha;
+//     delete userObj.__v;
 
     
-    return res.json({ user: userObj, token });
-  } catch (err) {
+//     return res.json({ user: userObj, token });
+//   } catch (err) {
     
-    return res.status(500).json({ error: 'Erro ao fazer login' });
-  }
-};
+//     return res.status(500).json({ error: 'Erro ao fazer login' });
+//   }
+// };
